# NumFunctions

./: .gitignore  README.md  README.txt
LLVM11/: CMakeLists.txt  FunctionCounter.cpp  README.txt  program.c
LLVM17/: CMakeLists.txt  FunctionCounter.cpp  program.c
